@@ -54,12 +54,13 @@ namespace
    */
   emap init_errors[] =
     {
+      emap(chroot_config::CHROOT,      N_("No such chroot")),
       emap(chroot_config::DIR_OPEN,    N_("Failed to open directory")),
-      emap(chroot_config::FILE_STAT,   N_("Failed to stat file")),
+      emap(chroot_config::FILE_NOTREG, N_("File is not a regular file"))
       emap(chroot_config::FILE_OPEN,   N_("Failed to open file")),
       emap(chroot_config::FILE_OWNER,  N_("File is not owned by user root")),
       emap(chroot_config::FILE_PERMS,  N_("File has write permissions for others")),
-      emap(chroot_config::FILE_NOTREG, N_("File is not a regular file"))
+      emap(chroot_config::FILE_STAT,   N_("Failed to stat file")),
     };
 
   bool chroot_alphasort (sbuild::chroot::ptr const& c1,
@@ -324,8 +325,10 @@ chroot_config::print_chroot_info (string_list const& chroots,
 	    stream << '\n';
 	}
       else
-	log_error() << format(_("%1%: No such chroot")) % *pos
-		    << endl;
+	{
+	  error e(*pos, CHROOT);
+	  log_error() << e.what() << endl;
+	}
     }
 }
 
@@ -343,8 +346,10 @@ chroot_config::print_chroot_location (string_list const& chroots,
 	  stream << chroot->get_path() << '\n';
 	}
       else
-	log_error() << format(_("%1%: No such chroot")) % *pos
-		    << endl;
+	{
+	  error e(*pos, CHROOT);
+	  log_error() << e.what() << endl;
+	}
     }
 
   stream << std::flush;
@@ -366,8 +371,10 @@ chroot_config::print_chroot_config (string_list const& chroots,
 	  info << chroot;
 	}
       else
-	log_error() << format(_("%1%: No such chroot")) % *pos
-		    << endl;
+	{
+	  error e(*pos, CHROOT);
+	  log_error() << e.what() << endl;
+	}
     }
 
   stream << info;
