@@ -1,5 +1,13 @@
 2006-06-24  Roger Leigh  <rleigh@debian.org>
 
+	* sbuild/sbuild-session.(cc|h): Use error codes for logging in
+	addition to thrown exceptions.
+
+	* sbuild/sbuild-chroot-config.(cc|h): Use error codes for logging
+	in addition to thrown exceptions.
+
+2006-06-24  Roger Leigh  <rleigh@debian.org>
+
 	* Move sbuild sources into an sbuild subdirectory, dchroot sources
 	into a dchroot subdirectory and dchroot-dsa sources into a
 	dchroot-dsa subdirectory.
